# constellation-centauri-poc

./: .gitignore  AGENTS.md  BLE_INTEGRATION_GUIDE.md  BLE_PROTOCOL.md  CLAUDE.md  Cargo.toml  HARDWARE_TESTING.md  Makefile  PHASE5_SUMMARY.md  POC_IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  SPEC.md  build.rs  flake.nix
.cargo/: config.toml
companion/: Cargo.toml
companion/src/: main.rs  runtime.rs
companion/src/ble/: constants.rs  mod.rs  network.rs  runtime.rs
companion/src/diagnostics/: mod.rs  state.rs
companion/src/node/: mod.rs  storage.rs
companion/src/onboarding/: mod.rs
companion/src/tui/: app.rs  mod.rs  ui.rs
docs/archive/: phase5-summary.md  poc-plan.md
docs/guides/: ble-integration.md  hardware-testing.md
docs/reviews/: protocol-review.md
docs/spec/: protocol.md
firmware/: Cargo.toml  build.rs  export-esp.sh  partitions.csv
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/node/: mod.rs  partitioned_flash.rs  storage.rs
firmware/src/transport/: ble_network.rs  mod.rs
routing-core/: Cargo.toml
routing-core/src/: behavior.rs  config.rs  facade.rs  lib.rs  message.rs  network.rs  onboarding.rs  store_forward.rs
routing-core/src/crypto/: encryption.rs  identity.rs  mod.rs
routing-core/src/node/: mod.rs  roles.rs
routing-core/src/protocol/: app.rs  dedup.rs  h2h.rs  heartbeat.rs  mod.rs  packet.rs
routing-core/src/routing/: bloom.rs  mod.rs  table.rs
routing-core/src/transport/: mod.rs
sim/: Cargo.toml
sim/src/: behavior.rs  command_task.rs  config_ops.rs  export.rs  harness.rs  lib.rs  main.rs  medium.rs  message_task.rs  network.rs  runtime.rs  scenario.rs  sim_state.rs  snapshot_task.rs  store_forward.rs  tui_logger.rs
sim/src/tui/: app.rs  mod.rs  ui.rs
sim/tests/: headless_sim.rs  protocol_failures.rs
src/: ble_main.rs  config.rs  main.rs
src/crypto/: encryption.rs  identity.rs  mod.rs
src/node/: mod.rs  roles.rs  storage.rs
src/protocol/: dedup.rs  h2h.rs  heartbeat.rs  mod.rs  packet.rs
src/routing/: mod.rs  table.rs
src/transport/: ble.rs  gatt.rs  mod.rs
