[package]
edition = "2021"
name = "constellation"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-riscv32"], default-features = false }
embassy-futures = { version = "0.1.1", features = ["log"] }
embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log", "generic-queue-8"], default-features = false }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-hal = { version = "1.0.0", features = ["unstable", "rt"] }
esp-println = { version = "0.16.1" }
esp-storage = "0.8.1"
esp-radio = { version = "0.17.0", features = ["unstable", "ble"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio"] }
static_cell = "2.1.0"
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", branch = "main", features = [
  "peripheral",
  "central",
  "scan",
  "gatt",
] }
trouble-host-macros = { git = "https://github.com/embassy-rs/trouble.git", branch = "main" }
bt-hci = "0.8"

# Crypto dependencies
ed25519-dalek = { version = "2.1", default-features = false, features = [
  "rand_core",
] }
x25519-dalek = { version = "2", default-features = false, features = [
  "static_secrets",
] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = "0.6.4"

# Utility dependencies
heapless = "0.8.0"
embedded-storage = "0.3"
log = "0.4"
curve25519-dalek = { version = "4", default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

[features]
default = ["esp32c6"]

esp32 = [
  "esp-hal/esp32",
  "esp-backtrace/esp32",
  "esp-println/esp32",
  "esp-rtos/esp32",
  "esp-radio/esp32",
  "esp-storage/esp32",
]
esp32c2 = [
  "esp-hal/esp32c2",
  "esp-backtrace/esp32c2",
  "esp-println/esp32c2",
  "esp-rtos/esp32",
  "esp-radio/esp32c2",
  "esp-storage/esp32c2",
]
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-println/esp32c3",
  "esp-rtos/esp32c3",
  "esp-radio/esp32c3",
  "esp-storage/esp32c3",
]
esp32c6 = [
  "esp-hal/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-println/esp32c6",
  "esp-rtos/esp32c6",
  "esp-radio/esp32c6",
  "esp-storage/esp32c6",
]
esp32h2 = [
  "esp-hal/esp32h2",
  "esp-backtrace/esp32h2",
  "esp-println/esp32h2",
  "esp-rtos/esp32h2",
  "esp-radio/esp32h2",
  "esp-storage/esp32h2",
]
esp32s3 = [
  "esp-hal/esp32s3",
  "esp-backtrace/esp32s3",
  "esp-println/esp32s3",
  "esp-rtos/esp32s3",
  "esp-radio/esp32s3",
  "esp-storage/esp32s3",
]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false

# Patch esp-hal crates for trouble-host compatibility
[patch.crates-io]
esp-alloc =             { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-backtrace =         { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-bootloader-esp-idf ={ git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-hal =               { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-println =           { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-radio =             { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-rtos =              { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-storage =           { git = "https://github.com/lulf/esp-hal.git", rev="49ba429e34266bcac867b968e0a55b433d5a7c37" }
