[package]
name = "companion"
version = "0.1.0"
edition = "2021"

[dependencies]
routing-core = { path = "../routing-core" }

blew = { path = "../../blew/crates/blew" }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1"
embassy-sync = { version = "0.8.0", default-features = false }
embassy-time = { version = "0.5.0", features = ["std", "generic-queue-8"], default-features = false }
ratatui = "0.30"
crossterm = "0.29"
rand = "0.8"
heapless = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
