[package]
name = "routing-core"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.8.0", default-features = false }
embassy-sync = { version = "0.7.2", default-features = false }
embassy-time = { version = "0.5.0", default-features = false }
embassy-futures = { version = "0.1.1", default-features = false }

sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf = { version = "0.12", default-features = false }
rand_core = "0.6.4"
log = { version = "0.4", default-features = false }
curve25519-dalek = { version = "4", default-features = false }
